<resources>
    <string name="app_name">Testing_MVP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="credential">Login</string>
    <string name="add_post">Add Post</string>
    <string name="title">Enter title</string>
    <string name="text">Enter text</string>
</resources>
