<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.authentication.LoginFragment">


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:id="@+id/username_label"
            android:textSize="@dimen/normal_text"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>

    <EditText android:id="@+id/username"
              android:layout_width="match_parent"
              app:layout_constraintTop_toBottomOf="@id/username_label"
              android:layout_height="wrap_content"
              android:hint="@string/enter_your_username"
              android:textSize="@dimen/normal_text"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="8dp"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="8dp"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="@dimen/normal_text"
            android:id="@+id/password_label"
            app:layout_constraintTop_toBottomOf="@id/username"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/enter_your_password"
              android:textSize="@dimen/normal_text"
              android:id="@+id/password"
              app:layout_constraintTop_toBottomOf="@id/password_label"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="8dp"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="8dp"/>
    <Button android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credential"
            app:layout_constraintTop_toBottomOf="@+id/password"
            android:layout_marginTop="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>