<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.post.PostFragment">

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/post_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/new_post_title"/>

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:hint="@string/title"
              android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/new_post_text"
              android:id="@+id/new_post_title" android:inputType="text"/>

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:hint="@string/text" app:layout_constraintBottom_toTopOf="@+id/add_post_button"
              android:layout_marginBottom="8dp" android:id="@+id/new_post_text" android:inputType="text"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_post"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/add_post_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>